[package]
name = "qwutils"
version = "0.1.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"
description = "some utilities"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolinator = "2.4"

[dev-dependencies]
lazy_static = "1.4"
criterion = "0.3"

[[bench]]
name = "access"
harness = false

